--- a/garits_gui/src/index.css
+++ b/garits_gui/src/index.css
@@ -4,4 +4,11 @@
 
 body {
   margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  -webkit-box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  -moz-osx-box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
